# DigYourWindows

.github/workflows/: ci.yml
.kiro/specs/digyourwindows-improvements/: design.md  requirements.md  tasks.md
DigYourWindows/: TEST_INFRASTRUCTURE_SETUP.md  diagnostic-data-schema.json
DigYourWindows/DigYourWindows_Rust/: .gitignore  Cargo.toml  README.md  package.bat  proptest.toml  test_report.html
DigYourWindows/DigYourWindows_Rust/changelog/: 2025-12-04-cli-wmi-perf-package.md  2025-12-04-report-ui.md
DigYourWindows/DigYourWindows_Rust/release/: README.md  run.bat  template.html
DigYourWindows/DigYourWindows_Rust/src/: errors.rs  events.rs  hardware.rs  lib.rs  logging.rs  main.rs  models.rs  performance.rs  reliability.rs  report.rs  simple_report.rs  template.html  template_new.html  template_simple.html  wmi.rs  wmi_impl.rs  wmi_provider.rs
DigYourWindows/DigYourWindows_Rust/tests/: README.md  error_logging_property_tests.rs  json_roundtrip_tests.rs  sample_property_test.rs  schema_validation_tests.rs  wmi_provider_property_tests.rs
DigYourWindows/DigYourWindows_Rust/tests/property/: .gitkeep
DigYourWindows/DigYourWindows_WPF/: DigYourWindows.slnx  README.md
DigYourWindows/DigYourWindows_WPF/DigYourWindows.Core/: Class1.cs  DigYourWindows.Core.csproj
DigYourWindows/DigYourWindows_WPF/DigYourWindows.Core/Exceptions/: ReportException.cs  WmiException.cs
DigYourWindows/DigYourWindows_WPF/DigYourWindows.Tests/: DigYourWindows.Tests.csproj
DigYourWindows/DigYourWindows_WPF/DigYourWindows.UI/: App.xaml  App.xaml.cs  DigYourWindows.UI.csproj  MainWindow.xaml  MainWindow.xaml.cs
DigYourWindows/DigYourWindows_WPF/scripts/: build-installer.ps1  publish.ps1
changelog/: 2025-12-04-cli-wmi-perf-package.md  2025-12-04-report-ui.md  2025-12-14-remove-rust-and-refactor.md
(+19 files in other folders)
