[package]
name = "DigYourWindows_Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.36.1"
tera = "1.20.1"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
directories = "5.0"
# For more robust WMIC command handling (run in background thread with timeout)
# KISS：不额外引入复杂异步运行时，仅使用标准库并保持依赖精简
# WMI dependencies (temporarily commented out until we implement real WMI access)
# windows = { version = "0.58.0", features = [
#     "Win32_System_Wmi",
#     "Win32_System_Com",
#     "Win32_System_Ole",
#     "Win32_Security",
#     "Win32_System_Registry",
#     "Win32_System_EventLog",
# ] }
# tokio = { version = "1.40", features = ["full"] }
