[package]
name = "DigYourWindows_Rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "DigYourWindows_Rust"
path = "src/lib.rs"

[[bin]]
name = "DigYourWindows_Rust"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sysinfo = "0.36.1"
tera = "1.20.1"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
directories = "5.0"
thiserror = "1.0"
windows = { version = "0.58.0", features = [
    "Win32_System_Wmi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_System_Variant",
] }

[dev-dependencies]
proptest = "1.5"
jsonschema = "0.18"
tempfile = "3.10"
